@@ -30,14 +30,6 @@ dependencies {
     // 使用Maven中央仓库中的Lombok依赖
     implementation 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
-    // javax.annotation API
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    // Auto Service用于自动生成服务提供程序配置
-    compileOnly 'com.google.auto.service:auto-service-annotations:1.0.1'
-    annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
-    
-    // JavaPoet用于代码生成
-    implementation 'com.squareup:javapoet:1.13.0'
     
     // 测试依赖
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
@@ -53,6 +45,11 @@ tasks.withType(JavaCompile).configureEach {
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
     options.forkOptions.jvmArgs += '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
+    options.compilerArgs += ['--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED']
 }
 
 // 测试配置
